Fixing parallax spacing and spacing between paragraphs of cards

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,3 +69,7 @@ h1, h3, h4, h5 {
 .phone-number {
   padding-left: 10px;
 }
+
+.card .card-content p {
+  margin-bottom: 18px;
+}
